After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691363 - Various minor cleanups and fixes
Various minor cleanups and fixes
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-08 20:54 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-01-08 21:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
compositor: Remove unused code fetching _XSETROOT_ID (1.75 KB, patch)
2013-01-08 20:54 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
main: Remove call to clutter_x11_enable_xinput (783 bytes, patch)
2013-01-08 20:54 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
display: Remove some more core events (751 bytes, patch)
2013-01-08 20:54 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
display: Use XI2 constants for mode/detail focus event values (4.92 KB, patch)
2013-01-08 20:54 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
Remove some server calls for core devices (8.82 KB, patch)
2013-01-08 20:55 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-01-08 20:54:49 UTC
None of these are mission-critical, just cleanups. The last one may matter,
but only if running on non-Xorg servers. The default client pointer in Xorg
is guaranteed to be the same as the master pointer device, even if the
specification leaves it implementation-specific.
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-01-08 20:54:51 UTC
Created attachment 233011 [details] [review]
compositor: Remove unused code fetching _XSETROOT_ID

We don't use this atom anywhere, so don't bother fetching it.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-01-08 20:54:54 UTC
Created attachment 233012 [details] [review]
main: Remove call to clutter_x11_enable_xinput

The call is deprecated and is called by default upstream.
Comment 3 Jasper St. Pierre (not reading bugmail) 2013-01-08 20:54:56 UTC
Created attachment 233013 [details] [review]
display: Remove some more core events

I apparently forgot to remove these.
Comment 4 Jasper St. Pierre (not reading bugmail) 2013-01-08 20:54:58 UTC
Created attachment 233014 [details] [review]
display: Use XI2 constants for mode/detail focus event values

This makes no function difference, except conceptual clarity.
Comment 5 Jasper St. Pierre (not reading bugmail) 2013-01-08 20:55:01 UTC
Created attachment 233015 [details] [review]
Remove some server calls for core devices

These were missed in the first porting.
Comment 6 drago01 2013-01-08 21:05:40 UTC
Review of attachment 233011 [details] [review]:

OK.
Comment 7 drago01 2013-01-08 21:06:00 UTC
Review of attachment 233012 [details] [review]:

OK.
Comment 8 drago01 2013-01-08 21:06:46 UTC
Review of attachment 233013 [details] [review]:

OK.
Comment 9 drago01 2013-01-08 21:07:28 UTC
Review of attachment 233014 [details] [review]:

OK.
Comment 10 drago01 2013-01-08 21:13:00 UTC
Review of attachment 233015 [details] [review]:

OK.
Comment 11 Jasper St. Pierre (not reading bugmail) 2013-01-08 21:15:21 UTC
Attachment 233011 [details] pushed as 66d37e0 - compositor: Remove unused code fetching _XSETROOT_ID
Attachment 233012 [details] pushed as afbca61 - main: Remove call to clutter_x11_enable_xinput
Attachment 233013 [details] pushed as e69fcc8 - display: Remove some more core events
Attachment 233014 [details] pushed as f57d643 - display: Use XI2 constants for mode/detail focus event values
Attachment 233015 [details] pushed as 3a3be74 - Remove some server calls for core devices