display: Remove some more core events

I apparently forgot to remove these.

https://bugzilla.gnome.org/show_bug.cgi?id=691363